--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -1,12 +1,15 @@
 name: Release
 
 on:
+  push:
+    tags:
+      - "*"
   workflow_dispatch:
 
 env:
   go_version: '1.17'
   flutter_channel: 'stable'
-  GH_TOKEN: ${{ secrets.GH_TOKEN }}
+  GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
 
@@ -89,7 +92,6 @@ jobs:
           go run ./cmd/check_asset
 
       - name: Setup flutter
-        if: steps.check_asset.outputs.skip_build != 'true'
         uses: subosito/flutter-action@v2
         with:
           channel: ${{ env.flutter_channel }}
@@ -97,14 +99,14 @@ jobs:
           architecture: x64
 
       - name: Setup java (Android)
-        if: steps.check_asset.outputs.skip_build != 'true' && ( matrix.config.target == 'android-arm32' || matrix.config.target == 'android-arm64' || matrix.config.target == 'android-x86_64' )
+        if: ( matrix.config.target == 'android-arm32' || matrix.config.target == 'android-arm64' || matrix.config.target == 'android-x86_64' )
         uses: actions/setup-java@v3
         with:
           java-version: 8
           distribution: 'zulu'
 
       - name: Setup android tools (Android)
-        if: steps.check_asset.outputs.skip_build != 'true' && ( matrix.config.target == 'android-arm32' || matrix.config.target == 'android-arm64' || matrix.config.target == 'android-x86_64' )
+        if: ( matrix.config.target == 'android-arm32' || matrix.config.target == 'android-arm64' || matrix.config.target == 'android-x86_64' )
         uses: maxim-lobanov/setup-android-tools@v1
         with:
           packages: |
@@ -114,13 +116,13 @@ jobs:
             ndk;22.1.7171670
 
       - name: Setup msys2 (Windows)
-        if: steps.check_asset.outputs.skip_build != 'true' && matrix.config.target == 'windows'
+        if: matrix.config.target == 'windows'
         uses: msys2/setup-msys2@v2
         with:
           install: gcc make
 
       - name: Install dependencies (Linux)
-        if: steps.check_asset.outputs.skip_build != 'true' && matrix.config.target == 'linux'
+        if: matrix.config.target == 'linux'
         env:
           ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
         run: |
@@ -133,30 +135,29 @@ jobs:
           sudo apt-get install -y libgl1-mesa-dev xorg-dev
 
       - name: Install hover (desktop)
-        if: steps.check_asset.outputs.skip_build != 'true' && ( matrix.config.target == 'linux' || matrix.config.target == 'windows' || matrix.config.target == 'macos')
+        if: ( matrix.config.target == 'linux' || matrix.config.target == 'windows' || matrix.config.target == 'macos')
         run: |
           go install github.com/go-flutter-desktop/hover@latest
 
       - name: Install go mobile (mobile)
-        if: steps.check_asset.outputs.skip_build != 'true' && ( matrix.config.target == 'ios' || matrix.config.target == 'android-arm64' || matrix.config.target == 'android-arm32' || matrix.config.target == 'android-x86_64' )
+        if: ( matrix.config.target == 'ios' || matrix.config.target == 'android-arm64' || matrix.config.target == 'android-arm32' || matrix.config.target == 'android-x86_64' )
         run: |
           go install golang.org/x/mobile/cmd/gomobile@latest
 
       - name: Set-Version (All)
-        if: steps.check_asset.outputs.skip_build != 'true'
         run: |
           cd ci
           cp version.code.txt ../lib/assets/version.txt
 
       - name: Upgrade deps version (Android)
-        if: steps.check_asset.outputs.skip_build != 'true' && !startsWith(matrix.config.host, 'macos') && startsWith(matrix.config.flutter_version, '3')
+        if: startsWith(matrix.config.flutter_version, '3') && !startsWith(matrix.config.host, 'macos')
         run: |
           sed -i "s/another_xlider: 1.0.1+2/another_xlider: ^1.0.1+2/g" pubspec.yaml
           sed -i "s/flutter_styled_toast: 2.0.0/flutter_styled_toast: ^2.0.0/g" pubspec.yaml
           sed -i "s/filesystem_picker: 2.0.0/filesystem_picker: ^2.0.0/g" pubspec.yaml
 
       - name: Build (windows)
-        if: steps.check_asset.outputs.skip_build != 'true' && matrix.config.target == 'windows'
+        if: matrix.config.target == 'windows'
         run: |
           hover build windows
           cd go\build\outputs\windows-release
@@ -166,13 +167,13 @@ jobs:
           Compress-Archive * ../../../../build/build.zip
 
       - name: Build (macos)
-        if: steps.check_asset.outputs.skip_build != 'true' && matrix.config.target == 'macos'
+        if: matrix.config.target == 'macos'
         run: |
           hover build darwin-dmg
           mv go/build/outputs/darwin-dmg-release/*.dmg build/build.dmg
 
       - name: Build (linux)
-        if: steps.check_asset.outputs.skip_build != 'true' && matrix.config.target == 'linux'
+        if: matrix.config.target == 'linux'
         run: |
           curl -JOL https://github.com/junmer/source-han-serif-ttf/raw/master/SubsetTTF/CN/SourceHanSerifCN-Regular.ttf
           mkdir -p fonts
@@ -182,28 +183,28 @@ jobs:
           mv go/build/outputs/linux-appimage-release/*.AppImage build/build.AppImage
 
       - name: Build (ios)
-        if: steps.check_asset.outputs.skip_build != 'true' && matrix.config.target == 'ios'
+        if: matrix.config.target == 'ios'
         run: |
           /usr/libexec/PlistBuddy -c 'Add :application-identifier string niuhuan.nhentai' ios/Runner/Info.plist
           sh scripts/build-ipa.sh
 
       - name: Build (android-arm32)
-        if: steps.check_asset.outputs.skip_build != 'true' && matrix.config.target == 'android-arm32'
+        if: matrix.config.target == 'android-arm32'
         run: |
           sh scripts/build-apk-arm.sh
 
       - name: Build (android-arm64)
-        if: steps.check_asset.outputs.skip_build != 'true' && matrix.config.target == 'android-arm64'
+        if: matrix.config.target == 'android-arm64'
         run: |
           sh scripts/build-apk-arm64.sh
 
       - name: Build (android-x86_64)
-        if: steps.check_asset.outputs.skip_build != 'true' && matrix.config.target == 'android-x86_64'
+        if: matrix.config.target == 'android-x86_64'
         run: |
           sh scripts/build-apk-x64.sh
 
       - name: Sign APK (Android)
-        if: steps.check_asset.outputs.skip_build != 'true' && ( matrix.config.target == 'android-arm32' || matrix.config.target == 'android-arm64' || matrix.config.target == 'android-x86_64' )
+        if: ( matrix.config.target == 'android-arm32' || matrix.config.target == 'android-arm64' || matrix.config.target == 'android-x86_64' )
         env:
           KEY_FILE_BASE64: ${{ secrets.KEY_FILE_BASE64 }}
           KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
@@ -211,8 +212,6 @@ jobs:
           sh scripts/sign-apk-github-actions.sh
 
       - name: Upload Asset (All)
-        if: steps.check_asset.outputs.skip_build != 'true'
         run: |
           cd ci
           go run ./cmd/upload_asset
-
