--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 env:
-  go_version: '1.17'
+  go_version: '^1.19'
   flutter_channel: 'stable'
   GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -32,9 +32,10 @@ jobs:
           ref: 'master'
       - name: Checkout submodules
         run: git submodule update --init --recursive
-      - uses: actions/setup-go@v2
+      - uses: actions/setup-go@v3
         with:
           go-version: ${{ env.go_version }}
+          check-latest: true
       - name: Check release
         run: |
           cd ci
@@ -50,25 +51,25 @@ jobs:
         config:
           - target: linux
             host: ubuntu-latest
-            flutter_version: '2.10.3'
+            flutter_version: '2.10.5'
           - target: windows
             host: windows-latest
-            flutter_version: '2.10.3'
+            flutter_version: '2.10.5'
           - target: macos
             host: macos-12
-            flutter_version: '2.10.3'
+            flutter_version: '2.10.5'
           - target: ios
             host: macos-12
-            flutter_version: '3.3.4'
+            flutter_version: '3.3.10'
           - target: android-arm32
             host: ubuntu-latest
-            flutter_version: '3.3.4'
+            flutter_version: '3.3.10'
           - target: android-arm64
             host: ubuntu-latest
-            flutter_version: '3.3.4'
+            flutter_version: '3.3.10'
           - target: android-x86_64
             host: ubuntu-latest
-            flutter_version: '3.3.4'
+            flutter_version: '3.3.10'
 
     runs-on: ${{ matrix.config.host }}
 
@@ -81,9 +82,10 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Setup golang
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v3
         with:
           go-version: ${{ env.go_version }}
+          check-latest: true
 
       - id: check_asset
         name: Check asset
@@ -102,8 +104,9 @@ jobs:
         if: ( matrix.config.target == 'android-arm32' || matrix.config.target == 'android-arm64' || matrix.config.target == 'android-x86_64' )
         uses: actions/setup-java@v3
         with:
+          distribution: 'temurin'
           java-version: 8
-          distribution: 'zulu'
+          check-latest: true
 
       - name: Setup android tools (Android)
         if: ( matrix.config.target == 'android-arm32' || matrix.config.target == 'android-arm64' || matrix.config.target == 'android-x86_64' )
