--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -104,7 +104,7 @@ jobs:
         if: ( matrix.config.target == 'android-arm32' || matrix.config.target == 'android-arm64' || matrix.config.target == 'android-x86_64' )
         uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
+          distribution: 'zulu'
           java-version: 8
           check-latest: true
 
