--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 env:
-  go_version: '^1.17'
+  go_version: '1.17'
   flutter_channel: 'stable'
   GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -32,10 +32,9 @@ jobs:
           ref: 'master'
       - name: Checkout submodules
         run: git submodule update --init --recursive
-      - uses: actions/setup-go@v3
+      - uses: actions/setup-go@v2
         with:
           go-version: ${{ env.go_version }}
-          check-latest: true
       - name: Check release
         run: |
           cd ci
@@ -56,10 +55,10 @@ jobs:
             host: windows-latest
             flutter_version: '2.10.3'
           - target: macos
-            host: macos-13
+            host: macos-12
             flutter_version: '2.10.3'
           - target: ios
-            host: macos-13
+            host: macos-12
             flutter_version: '3.3.4'
           - target: android-arm32
             host: ubuntu-latest
@@ -82,10 +81,9 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Setup golang
-        uses: actions/setup-go@v3
+        uses: actions/setup-go@v2
         with:
           go-version: ${{ env.go_version }}
-          check-latest: true
 
       - id: check_asset
         name: Check asset
@@ -104,9 +102,8 @@ jobs:
         if: ( matrix.config.target == 'android-arm32' || matrix.config.target == 'android-arm64' || matrix.config.target == 'android-x86_64' )
         uses: actions/setup-java@v3
         with:
-          distribution: 'zulu'
           java-version: 8
-          check-latest: true
+          distribution: 'zulu'
 
       - name: Setup android tools (Android)
         if: ( matrix.config.target == 'android-arm32' || matrix.config.target == 'android-arm64' || matrix.config.target == 'android-x86_64' )
