--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -9,7 +9,6 @@ on:
 env:
   go_version: '1.17'
   flutter_channel: 'stable'
-  GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
 
@@ -55,10 +54,10 @@ jobs:
             host: windows-latest
             flutter_version: '2.10.3'
           - target: macos
-            host: macos-12
+            host: macos-latest
             flutter_version: '2.10.3'
           - target: ios
-            host: macos-12
+            host: macos-latest
             flutter_version: '3.3.4'
           - target: android-arm32
             host: ubuntu-latest
@@ -152,9 +151,11 @@ jobs:
       - name: Upgrade deps version (Android)
         if: startsWith(matrix.config.flutter_version, '3') && !startsWith(matrix.config.host, 'macos')
         run: |
-          sed -i "s/another_xlider: 1.0.1+2/another_xlider: ^1.0.1+2/g" pubspec.yaml
-          sed -i "s/flutter_styled_toast: 2.0.0/flutter_styled_toast: ^2.0.0/g" pubspec.yaml
-          sed -i "s/filesystem_picker: 2.0.0/filesystem_picker: ^2.0.0/g" pubspec.yaml
+          sed -i "s/another_xlider: ^1.0.1+2/another_xlider: 1.0.1+2/g" pubspec.yaml
+          sed -i "s/flutter_styled_toast: ^2.0.0/flutter_styled_toast: 2.0.0/g" pubspec.yaml
+          sed -i "s/filesystem_picker: ^3.0.0-beta.1/filesystem_picker: 2.0.0/g" pubspec.yaml
+          sed -i "s/file_picker: ^5.2.1/file_picker: 4.6.1/g" pubspec.yaml
+          flutter pub get
 
       - name: Build (windows)
         if: matrix.config.target == 'windows'
