--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 env:
-  go_version: '^1.17'
+  go_version: '1.17'
   flutter_channel: 'stable'
   GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -51,25 +51,25 @@ jobs:
         config:
           - target: linux
             host: ubuntu-latest
-            flutter_version: '2.10.3'
+            flutter_version: '2.10.5'
           - target: windows
             host: windows-latest
-            flutter_version: '2.10.3'
+            flutter_version: '2.10.5'
           - target: macos
             host: macos-latest
-            flutter_version: '2.10.3'
+            flutter_version: '2.10.5'
           - target: ios
             host: macos-latest
-            flutter_version: '3.3.4'
+            flutter_version: '3.3.10'
           - target: android-arm32
             host: ubuntu-latest
-            flutter_version: '3.3.4'
+            flutter_version: '3.3.10'
           - target: android-arm64
             host: ubuntu-latest
-            flutter_version: '3.3.4'
+            flutter_version: '3.3.10'
           - target: android-x86_64
             host: ubuntu-latest
-            flutter_version: '3.3.4'
+            flutter_version: '3.3.10'
 
     runs-on: ${{ matrix.config.host }}
 
