--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -225,8 +225,8 @@ jobs:
       - name: Publish Artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: ${{ matrix.artifact_name }}
-          path: ${{ matrix.artifact_path }}
+          name: ${{ matrix.config.artifact_name }}
+          path: ${{ matrix.config.artifact_path }}
 
       - name: Sign APK (Android)
         if: ( matrix.config.target == 'android-arm32' || matrix.config.target == 'android-arm64' || matrix.config.target == 'android-x86_64' )
