--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -77,17 +77,17 @@ jobs:
             host: ubuntu-latest
             flutter_version: '3.3.10'
             artifact_name: release-apk-arm32
-            artifact_path: build/app/outputs/apk/release/app-release.apk
+            artifact_path: build/app/outputs/apk/release/nhentai-cross-android-arm32.apk
           - target: android-arm64
             host: ubuntu-latest
             flutter_version: '3.3.10'
             artifact_name: release-apk-arm64
-            artifact_path: build/app/outputs/apk/release/app-release.apk
+            artifact_path: build/app/outputs/apk/release/nhentai-cross-android-arm64.apk
           - target: android-x86_64
             host: ubuntu-latest
             flutter_version: '3.3.10'
             artifact_name: release-apk-x86_64
-            artifact_path: build/app/outputs/apk/release/app-release.apk
+            artifact_path: build/app/outputs/apk/release/nhentai-cross-android-arm32.apk
 
     runs-on: ${{ matrix.config.host }}
 
@@ -123,7 +123,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
-          java-version: 17
+          java-version: 18
           check-latest: true
 
       - name: Setup android tools (Android)
@@ -215,16 +215,19 @@ jobs:
         if: matrix.config.target == 'android-arm32'
         run: |
           sh scripts/build-apk-arm.sh
+          cp build/app/outputs/apk/release/app-release.apk build/app/outputs/apk/release/nhentai-cross-android-arm32.apk
 
       - name: Build (android-arm64)
         if: matrix.config.target == 'android-arm64'
         run: |
           sh scripts/build-apk-arm64.sh
+          cp build/app/outputs/apk/release/app-release.apk build/app/outputs/apk/release/nhentai-cross-android-arm64.apk
 
       - name: Build (android-x86_64)
         if: matrix.config.target == 'android-x86_64'
         run: |
           sh scripts/build-apk-x64.sh
+          cp build/app/outputs/apk/release/app-release.apk build/app/outputs/apk/release/nhentai-cross-android-x86_64.apk
 
       - name: Publish Artifacts
         uses: actions/upload-artifact@v3
